# sink

./: LICENSE  Makefile.am  README.md  bootstrap.sh  configure.in  grapher.py
examples/: brusselator.txt  circadian-clock-1.kappa  cycle.kappa  expressions.txt  lotka.txt  matchings.txt  oregonator.txt  radioactive_decay.txt  ras_system_in_cell.txt  ras_system_small.txt  rules.txt
kappa/: Makefile.am  Makefile.old  README  agent.hpp  bench.cpp  bond_map.hpp  complex.hpp  config.hpp  debug.hpp  expression.hpp  gillespie.hpp  kappa.cpp  lexer.hpp  lift_map.hpp  map.hpp  pattern.hpp  random.hpp  rule.hpp  system.hpp
sockets/: sink_client.cpp  sink_client_static.cpp
sockets/java_client/: Client.java
sockets/java_server/: OniServer.java  sink_client.sh
test/: Makefile.am  Makefile.old  agent.cpp  complex.cpp  expression.cpp  gillespie.cpp  lexer.cpp  lift_map.cpp  map.cpp  pattern.cpp  rule.cpp  system.cpp
